# tfmcp

./: .dockerignore  .gitignore  .terraform-version  CLAUDE.md  Cargo.toml  Dockerfile  README.md  RELEASE_NOTES_v0.1.4.md  RELEASE_NOTES_v0.1.5.md  Release.sh  package-lock.json  package.json
.claude/docs/: architecture.md  configuration.md  edition-2024-migration-plan.md  mcp-tools.md  troubleshooting.md
.claude/plans/: hashicorp-feature-comparison.md  v0.1.9-full-feature-parity.md
.claude/rules/: development-guidelines.md  quality-commands.md
.claude/skills/release/: SKILL.md
.cursor 2/rules/: 000_general.mdc  001_rust.mdc  003_mcp.mdc
.cursor/rules/: 002_terraform.mdc
.github/workflows/: rust.yml
.well-known/: x402.json
example/: README.md  example_output.txt
example/config/: tfmcp-local-adversely-one-dragon.json
example/demo/: main.tf
example/environments/dev/: dev-visually-feasible-newt.json  dev-visually-feasible-newt.md
example/environments/prod/: prod-actively-fun-gnat.json  prod-actively-fun-gnat.md
example/environments/staging/: staging-widely-robust-collie.json  staging-widely-robust-collie.md
example/master/: master-master-parakeet.json  master-master-parakeet.md
scripts/: build_mdc.js
src/: lib.rs  main.rs
src/config/: mod.rs
src/core/: tfmcp.rs
src/formatters/: mod.rs  output.rs
src/mcp/: error_handling.rs  handler.rs  handler_refactored.rs  mod.rs  resources.rs  server.rs  stdio.rs  types.rs
src/mcp/messages/: handler.rs  mod.rs
src/mcp/resources/: handler.rs  mod.rs
src/mcp/tools/: definitions.rs  mod.rs  registry.rs  security.rs  terraform.rs
src/prompts/: builder.rs  descriptions.rs  mod.rs
src/registry/: batch.rs  cache.rs  client.rs  fallback.rs  mod.rs  policy.rs  provider.rs
src/shared/: logging.rs  mod.rs  security.rs
src/shared/utils/: path.rs
src/terraform/: analyzer.rs  fmt.rs  graph.rs  import_helper.rs  mod.rs  model.rs  output.rs  parser.rs  parser_safe.rs  plan_analyzer.rs  providers.rs  refresh.rs  service.rs  state_analyzer.rs  taint.rs  workspace.rs
terraform/: main.tf
tests/: compilation.rs  e2e_mcp_test.rs  integration_tests.rs  mcp_integration.rs
