[package]
name = "tfmcp"
version = "0.1.10"
edition = "2024"
authors = ["nwiizo <syu.m.5151@gmail.com>"]
description = "Terraform Model Context Protocol Tool - A CLI tool to manage Terraform through MCP"
readme = "README.md"
repository = "https://github.com/nwiizo/tfmcp"
license = "MIT"
keywords = ["terraform", "mcp", "llm", "ai", "claude"]
categories = ["command-line-utilities", "development-tools"]
build = "build.rs"
rust-version = "1.85.0"

[lib]
name = "tfmcp"
path = "src/lib.rs"

[[bin]]
name = "tfmcp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
futures = "0.3"
tokio = { version = "1.50", features = ["full"] }
dirs = "6.0"
tempfile = "3.27"
regex = "1.12"
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "query",
  "rustls",
] }
which = "6.0"
chrono = { version = "0.4", features = ["serde"] }
# Logging improvements
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# MCP SDK
rmcp = { version = "1.2", features = ["server", "transport-io"] }
schemars = "1.2"

[dev-dependencies]
tempfile = "3.27"
rmcp = { version = "1.2", features = ["server", "client", "transport-io"] }
